# uchile_knowledge

./: .gitmodules
bender_db/: CMakeLists.txt  package.xml
bender_db/db/: download.sh
bender_db/db/ai/: questions.aiml
bender_db/db/emotion/resources/: haarcascade_eye.xml  haarcascade_frontalface_cbcl1.xml  haarcascade_frontalface_default.xml
bender_db/db/emotion/svm/: anger_contempt_disgust_vs_fear_happy_neutral_sadness_surprise_feats.xml  anger_contempt_fear_vs_disgust_happy_neutral_sadness_surprise_feats.xml  anger_contempt_happy_vs_disgust_fear_neutral_sadness_surprise_feats.xml  anger_contempt_neutral_vs_disgust_fear_happy_sadness_surprise_feats.xml  anger_contempt_sadness_vs_disgust_fear_happy_neutral_surprise_feats.xml  anger_contempt_surprise_vs_disgust_fear_happy_neutral_sadness_feats.xml  anger_contempt_vs_disgust_fear_happy_neutral_sadness_surprise_feats.xml  anger_disgust_fear_vs_contempt_happy_neutral_sadness_surprise_feats.xml  anger_disgust_happy_vs_contempt_fear_neutral_sadness_surprise_feats.xml  anger_disgust_neutral_vs_contempt_fear_happy_sadness_surprise_feats.xml  anger_disgust_sadness_vs_contempt_fear_happy_neutral_surprise_feats.xml  anger_disgust_surprise_vs_contempt_fear_happy_neutral_sadness_feats.xml  anger_disgust_vs_contempt_fear_happy_neutral_sadness_surprise_feats.xml  anger_fear_happy_vs_contempt_disgust_neutral_sadness_surprise_feats.xml  anger_fear_neutral_vs_contempt_disgust_happy_sadness_surprise_feats.xml  anger_fear_sadness_vs_contempt_disgust_happy_neutral_surprise_feats.xml  anger_fear_surprise_vs_contempt_disgust_happy_neutral_sadness_feats.xml  anger_fear_vs_contempt_disgust_happy_neutral_sadness_surprise_feats.xml  anger_happy_neutral_vs_contempt_disgust_fear_sadness_surprise_feats.xml  anger_happy_sadness_vs_contempt_disgust_fear_neutral_surprise_feats.xml  anger_happy_surprise_vs_contempt_disgust_fear_neutral_sadness_feats.xml  (+71 more)
bender_db/db/face/: description.txt  description.txt~
bender_db/db/gender/: gender_classifier_25imgs.xml  haarcascade_frontalface_default.xml
bender_db/db/hand_gesture/: svm.xml
bender_db/db/maps/: map.pgm  map.sem_map  map.yaml
bender_db/db/vfh/: kdtree.idx  training_data.h5  training_data.list
bender_db/games/: download.sh
bender_db/ros_pkgs/: download.sh
bender_db/sounds/: .gitignore
uchile_db/: .gitignore  CMakeLists.txt  package.xml
uchile_db/db/: download.sh
uchile_db/db/ai/: Capitals.aiml  Common.aiml  CrowdQuestions.aiml  Greeting.aiml  Objects_Questions.aiml  PersonLocation.aiml  RandomQuestion.aiml  RandomQuestionRC.aiml  RandomQuestions.aiml  RandomQuestions_old.txt  Setup.aiml  bender.properties  maqui.properties  questions.aiml  questions_old.txt  semu.properties
uchile_db/db/face_detector_deep/: PostureData.txt  PostureModel.pkl
uchile_db/db/robocup/: CreateMapperObject.sh  CreateMapperSPR.sh  CreateMapperTables.sh
uchile_db/games/: download.sh
uchile_db/ros_pkgs/: download.sh
uchile_maps/: CMakeLists.txt  README  package.xml  setup.py
uchile_maps/include/uchile_maps/: MapAnalyzer.h
uchile_maps/launch/: map_analyzer.launch  map_server.launch
uchile_maps/maps/: CP.sem_map  amtc.pgm  amtc.yaml  blank_map.sem_map  blank_map.yaml  blank_map_obstacles.yaml  cp.sem_map  gpsr.sem_map  gpsr_less.sem_map  map.pgm  map.sem_map  map.yaml  map_demo1.pgm  map_demo1.yaml  map_full.pgm  map_full_120.pgm  map_full_120.yaml  map_full_120_backup.pgm  map_noviembre.pgm  map_noviembre.yaml  map_obstacles.pgm  map_obstacles.yaml  map_test.pgm  map_test.yaml  map_test_lab_obstacles.pgm  map_test_obstacles.yaml  mapa2_1.pgm  mapa2_1.yaml  mapa2_1_obstacles.pgm  mapa2_1_obstacles.yaml  mapa_robocup_19.pgm  mapa_robocup_19.yaml  mapa_robocup_19_obstacles.yaml  smslam.pgm  smslam.yaml  smslam_obstacles.pgm  smslam_obstacles.yaml  stage_real.sem_map  sydney.sem_map
uchile_maps/maps/amtc/: amtc_obstacles.yaml
uchile_maps/maps/lab/: map.yaml  map_obstacles.pgm  map_obstacles.yaml
uchile_maps/maps/robocup2017/: map_full_120.pgm  map_full_backup.pgm  map_obstacles.pgm  map_obstacles.yaml
uchile_maps/src/: MapAnalyzer.cpp  gen_obstacles_map.py
uchile_maps/src/uchile_maps/: Octomap.py
uchile_pose_server/: CMakeLists.txt  package.xml
uchile_pose_server/include/uchile_pose_server/: PoseServer.h
uchile_pose_server/launch/: pose_server.launch
uchile_pose_server/src/: PoseServer.cpp  PoseServerMarkerPlugin.cpp
(+1974 files in other folders)
